# Py-Notes-cli

./: crud.py  notes.py  pyproject.toml
