[tool.poetry]
name = "notes"
version = "0.1.0"
description = "First python cli"
authors = ["Alwin van Dijken <alwin.vandijken@7dots.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notes = "notes:cli"